renamed numerous op names so the API is more user friendly
