# s2gos/common/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2025-06-23T07:09:39+00:00
+#   timestamp: 2025-06-23T07:46:00+00:00
 
 from __future__ import annotations
 
@@ -272,7 +272,7 @@ class ProcessRequest(BaseModel):
     subscriber: Optional[Subscriber] = None
 
 
-class ProcessResults(RootModel[Optional[dict[str, InlineOrRefValue]]]):
+class JobResults(RootModel[Optional[dict[str, InlineOrRefValue]]]):
     root: Optional[dict[str, InlineOrRefValue]] = None
 
 
