# s2gos/common/openapi.yaml
@@ -27,7 +27,7 @@ paths:
           * The endpoint for job monitoring (path /jobs).
 
         For more information, see [Section 7.2](https://docs.ogc.org/is/18-062/18-062.html#sc_landing_page).
-      operationId: getLandingPage
+      operationId: getCapabilities
       responses:
         "200":
           description: |-
@@ -71,7 +71,7 @@ paths:
         |Dismiss|http://www.opengis.net/spec/ogcapi-processes-1/1.0/conf/dismiss|
 
         For more information, see [Section 7.4](https://docs.ogc.org/is/18-062/18-062.html#sc_conformance_classes).
-      operationId: getConformanceClasses
+      operationId: getConformance
       responses:
         "200":
           description: |-
@@ -128,7 +128,7 @@ paths:
         Implementations SHOULD consider supporting the OGC process description.
 
         For more information, see [Section 7.10](https://docs.ogc.org/is/18-062/18-062.html#sc_process_description).
-      operationId: getProcessDescription
+      operationId: getProcess
       parameters:
       - name: processID
         in: path
@@ -166,7 +166,7 @@ paths:
         Create a new job.
 
         For more information, see [Section 7.11](https://docs.ogc.org/is/18-062/18-062.html#sc_create_job).
-      operationId: execute
+      operationId: executeProcess
       parameters:
       - name: processID
         in: path
@@ -228,7 +228,7 @@ paths:
                 content:
                   application/json:
                     schema:
-                      $ref: '#/components/schemas/results'
+                      $ref: '#/components/schemas/jobResults'
               responses:
                 "200":
                   description: Results received successfully
@@ -267,7 +267,7 @@ paths:
         Shows the status of a job.
 
         For more information, see [Section 7.12](https://docs.ogc.org/is/18-062/18-062.html#sc_retrieve_status_info).
-      operationId: getStatus
+      operationId: getJob
       parameters:
       - name: jobId
         in: path
@@ -308,7 +308,7 @@ paths:
         Cancel a job execution and remove it from the jobs list.
 
         For more information, see [Section 13](https://docs.ogc.org/is/18-062/18-062.html#Dismiss).
-      operationId: dismiss
+      operationId: dismissJob
       parameters:
       - name: jobId
         in: path
@@ -344,13 +344,13 @@ paths:
   /jobs/{jobId}/results:
     get:
       tags:
-      - ProcessResults
+      - JobResults
       summary: retrieve the result(s) of a job
       description: |
         Lists available results of a job. In case of a failure, lists errors instead.
 
         For more information, see [Section 7.13](https://docs.ogc.org/is/18-062/18-062.html#sc_retrieve_job_results).
-      operationId: getResult
+      operationId: getJobResults
       parameters:
       - name: jobId
         in: path
@@ -364,7 +364,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/processResults'
+                $ref: '#/components/schemas/jobResults'
         "404":
           description: The requested URI was not found.
           content:
@@ -491,7 +491,7 @@ components:
           - document
         subscriber:
           $ref: '#/components/schemas/subscriber'
-    processResults:
+    jobResults:
       type: object
       additionalProperties:
         $ref: '#/components/schemas/inlineOrRefValue'
