# s2gos/server/routes.py
@@ -1,26 +1,25 @@
 # generated by gen_server.py:
 #   filename:  routes.py:
-#   timestamp: 2025-06-23T09:10:09.259073
+#   timestamp: 2025-06-23T09:46:04.969018
 
 
 from s2gos.common.models import (
     ProcessRequest,
 )
-
 from .app import app
 from .provider import ServiceProvider
 
 
 # noinspection PyPep8Naming
 @app.get("/")
-async def get_landing_page():
-    return await ServiceProvider.instance().get_landing_page()
+async def get_capabilities():
+    return await ServiceProvider.instance().get_capabilities()
 
 
 # noinspection PyPep8Naming
 @app.get("/conformance")
-async def get_conformance_classes():
-    return await ServiceProvider.instance().get_conformance_classes()
+async def get_conformance():
+    return await ServiceProvider.instance().get_conformance()
 
 
 # noinspection PyPep8Naming
@@ -31,16 +30,14 @@ async def get_processes():
 
 # noinspection PyPep8Naming
 @app.get("/processes/{processID}")
-async def get_process_description(processID: str):
-    return await ServiceProvider.instance().get_process_description(
-        process_id=processID
-    )
+async def get_process(processID: str):
+    return await ServiceProvider.instance().get_process(process_id=processID)
 
 
 # noinspection PyPep8Naming
 @app.post("/processes/{processID}/execution")
-async def execute(processID: str, request: ProcessRequest):
-    return await ServiceProvider.instance().execute(
+async def execute_process(processID: str, request: ProcessRequest):
+    return await ServiceProvider.instance().execute_process(
         process_id=processID, request=request
     )
 
@@ -53,17 +50,17 @@ async def get_jobs():
 
 # noinspection PyPep8Naming
 @app.get("/jobs/{jobId}")
-async def get_status(jobId: str):
-    return await ServiceProvider.instance().get_status(job_id=jobId)
+async def get_job(jobId: str):
+    return await ServiceProvider.instance().get_job(job_id=jobId)
 
 
 # noinspection PyPep8Naming
 @app.delete("/jobs/{jobId}")
-async def dismiss(jobId: str):
-    return await ServiceProvider.instance().dismiss(job_id=jobId)
+async def dismiss_job(jobId: str):
+    return await ServiceProvider.instance().dismiss_job(job_id=jobId)
 
 
 # noinspection PyPep8Naming
 @app.get("/jobs/{jobId}/results")
-async def get_result(jobId: str):
-    return await ServiceProvider.instance().get_result(job_id=jobId)
+async def get_job_results(jobId: str):
+    return await ServiceProvider.instance().get_job_results(job_id=jobId)
