# s2gos/server/service.py
@@ -1,6 +1,6 @@
 # generated by gen_server.py:
 #   filename:  service.py:
-#   timestamp: 2025-06-23T09:10:09.387879
+#   timestamp: 2025-06-23T09:46:05.084147
 
 from abc import ABC, abstractmethod
 
@@ -11,36 +11,34 @@ from s2gos.common.models import (
     ConformanceDeclaration,
     JobInfo,
     JobList,
+    JobResults,
     ProcessDescription,
     ProcessList,
     ProcessRequest,
-    ProcessResults,
 )
 
 
 class Service(ABC):
     @abstractmethod
-    async def get_landing_page(self) -> Capabilities | JSONResponse:
+    async def get_capabilities(self) -> JSONResponse | Capabilities:
         pass
 
     @abstractmethod
-    async def get_conformance_classes(self) -> JSONResponse | ConformanceDeclaration:
+    async def get_conformance(self) -> JSONResponse | ConformanceDeclaration:
         pass
 
     @abstractmethod
-    async def get_processes(self) -> ProcessList | JSONResponse:
+    async def get_processes(self) -> JSONResponse | ProcessList:
         pass
 
     @abstractmethod
-    async def get_process_description(
-        self, process_id: str
-    ) -> ProcessDescription | JSONResponse:
+    async def get_process(self, process_id: str) -> JSONResponse | ProcessDescription:
         pass
 
     @abstractmethod
-    async def execute(
+    async def execute_process(
         self, process_id: str, request: ProcessRequest
-    ) -> JobInfo | JSONResponse:
+    ) -> JSONResponse | JobInfo:
         pass
 
     @abstractmethod
@@ -48,13 +46,13 @@ class Service(ABC):
         pass
 
     @abstractmethod
-    async def get_status(self, job_id: str) -> JobInfo | JSONResponse:
+    async def get_job(self, job_id: str) -> JSONResponse | JobInfo:
         pass
 
     @abstractmethod
-    async def dismiss(self, job_id: str) -> JobInfo | JSONResponse:
+    async def dismiss_job(self, job_id: str) -> JSONResponse | JobInfo:
         pass
 
     @abstractmethod
-    async def get_result(self, job_id: str) -> ProcessResults | JSONResponse:
+    async def get_job_results(self, job_id: str) -> JSONResponse | JobResults:
         pass
